--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
         android:label="event_calendar"
-        android:name="${applicationName}"
+        android:name="Event Calendar"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
