--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application
-        android:label="event_calendar"
-        android:name="Event Calendar"
-        android:icon="@mipmap/ic_launcher">
+        android:label="Event Calendar"
+        android:name="${applicationName}"
+        android:icon="@mipmap/event_calendar">
         <activity
             android:name=".MainActivity"
             android:exported="true"
